fix(themes): always show obtrusive scrollbars (#2862)
* fix(themes): always show obtrusive scrollbars

* docs(changeset): fix(themes): always show obtrusive scrollbars

* fix: add scrollbars to app not body

* fix: switch from hook to utility function to avoid vue dependency

--- a/packages/themes/src/scrollbars.css
+++ b/packages/themes/src/scrollbars.css
@@ -13,6 +13,13 @@
   .custom-scroll:hover {
     scrollbar-color: var(--scalar-scrollbar-color, transparent) transparent;
   }
+  /* Force Obtrusive Scrollbars */
+  &.scalar-scrollbars-obtrusive {
+    .cm-scroller,
+    .custom-scroll {
+      scrollbar-color: var(--scalar-scrollbar-color, transparent) transparent;
+    }
+  }
   .cm-scroller:hover::-webkit-scrollbar-thumb,
   .custom-scroll:hover::-webkit-scrollbar-thumb {
     background: var(--scalar-scrollbar-color);
